Additional comments and correct Gaussian normalization

--- a/skysub/decomposition_skyLines_groups_and_SkyModel_continuum.ipynb
+++ b/skysub/decomposition_skyLines_groups_and_SkyModel_continuum.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0e8a189a",
    "metadata": {},
    "outputs": [],
@@ -396,7 +396,7 @@
     "    for wave_line, flux_line in zip(wave_group, flux_group):\n",
     "        if (wave_line >= wave[0]) & (wave_line <= wave[-1]):\n",
     "            yy = (wave - wave_line) / lsf_sigma\n",
-    "            design_matrix[i] += flux_line * np.exp(-0.5 * yy ** 2)"
+    "            design_matrix[i] += flux_line * np.exp(-0.5 * yy ** 2) / (np.sqrt(2*np.pi) * lsf_sigma)"
    ]
   },
   {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0e509c32",
    "metadata": {},
    "outputs": [
@@ -468,6 +468,7 @@
     "# flexible in case independent component fitting is needed.\n",
     "cont_spec = np.sum(continuum_matrix, axis=0)\n",
     "\n",
+    "# put continuum matrix instead of cont_spec to fit all continuum components independently\n",
     "design_matrix_complete = np.vstack( (design_matrix, cont_spec) )\n",
     "\n",
     "bounds = (0, np.inf) # requiring only positive values\n",
